--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,12 @@
 parameters:
 
 services:
+
+    App\Service\TokenService:
+        arguments:
+            $entityManager: '@doctrine.orm.entity_manager'
+
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
