Ajout des renforcement de sécurités comprenant les 12 caractères minimum (1 Majuscule,minuscule,1 spéciale et 1 chiffre) et de l'ajout de la sécurité concernant les attaques par force brute

--- a/.env
+++ b/.env
@@ -45,3 +45,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 #SERVER SMTP   Mailtrap
 MAILER_DSN=smtp://11f22415049cfc:3f30c5b24358b3@sandbox.smtp.mailtrap.io:2525
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
