--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -19,6 +19,8 @@ framework:
 
 when@test:
     framework:
+        #Protection CSRF
+        csrf_protection: ~
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
