Ajout d'un compte Admin dans ma Base de donnée avec la possibilité de pouvoir cliqué sur un onglet qui est visible "listes des utilisateurs" uniquement quand on à un rôle ADMIN. Egalement la création de la page "listes des utilisateurs". qui affiche le pseudo , email des utilisateurs.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,13 @@
 security:
+    
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
+        App\Entity\User:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -30,7 +35,7 @@ security:
                 max_attempts: 3          # par minute 
                 interval: '15 minutes' #intervale d'attente
 
-           
+         #CSRF FAILLE  
         secured_area:
             form_login:
                 enable_csrf: true
@@ -48,11 +53,20 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+
+    role_hierarchy:
+        ROLE_MOD: [ROLE_USER]
+        ROLE_ADMIN: [ROLE_MOD]  
+
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+          - { path: ^/private, roles: ROLE_MOD }
+
+
 
 when@test:
     security:
