Ajout de ROLE_MOD  (Modérateur) étant donnée qu'un utilisateur inscrit peut intéragir dans les posts, lancer un nouveau post ou article automatiquement dès qu'un utilisateur s'inscrit. Et également Ajout d'un compte ROLE_ADMIN qui lui seul pourra voir la liste des utilisateurs.

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,8 +32,8 @@ security:
             #    LIMITATION TENTATIVES DE CONNEXION
             login_throttling: null
             login_throttling:
-                max_attempts: 3          # par minute 
-                interval: '15 minutes' #intervale d'attente
+                max_attempts: 5          # par minute 
+                interval: '5 minutes' #intervale d'attente
 
          #CSRF FAILLE  
         secured_area:
@@ -65,6 +65,7 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
           - { path: ^/private, roles: ROLE_MOD }
+          - { path: ^/app_liste_comptesUser, roles: ROLE_ADMIN }
 
 
 
