--- a/.env
+++ b/.env
@@ -40,14 +40,20 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 #SERVER SMTP   Mailtrap
-MAILER_DSN=smtp://11f22415049cfc:3f30c5b24358b3@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=smtp://b0f462137b5ba3:67c1c06eee11dd@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=smtp://localhost:1025
+
+
+
 
 ###> symfony/lock ###
 # Choose one of the stores below
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=flock
 ###< symfony/lock ###
+
+
