--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ APP_SECRET=30a034f3cd436b7a33f584db1946fc4a
 
 #LIAISON A LA BDD
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:Abdullrahman@127.0.0.1:3306/BddAeroBLOG"
 
-DATABASE_URL="mysql://root:changeme@127.0.0.1:3306/BddAeroBLOG"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
