Ajout de la page de Confidentialité et de sa route afin de montré la conformité avec le RGPD et également le respect des recommandations de la CNIL qui veillent à la protection des données personnelles.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -232,4 +232,8 @@ app_ADMIN_user_delete:
 
 
 
-
+#Page de Confidentialité
+politique_confidentialite:
+    path: /politique-confidentialite
+    controller: App\Controller\AccueilController::politiqueConfidentialite
+   
