Ajout des Ami, Messages privés,Listes de catégories minimum de 8 comme liste visible de catégories

--- a/.env
+++ b/.env
@@ -40,12 +40,19 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=null://null
+#MAILER_DSN="smtp://alkarshi.abdullrahman:btybzxslnfkjmaej@smtp.gmail.com:587?encryption=tls&auth_mode=login"
 ###< symfony/mailer ###
 
 #SERVER SMTP   Mailtrap
-#MAILER_DSN=smtp://b0f462137b5ba3:67c1c06eee11dd@sandbox.smtp.mailtrap.io:2525
+MAILER_DSN=smtp://d8b3fcebee40ab:29062afc2a00ff@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN="smtp://alkarshi.abdullrahman:btybzxslnfkjmaej@smtp.gmail.com:587?encryption=tls&auth_mode=login"
 #MAILER_DSN=smtp://localhost:1025
+
+#EMAIL_HOST = 'smtp.gmail.com'
+#EMAIL_USE_TLS = True
+#EMAIL_PORT = 587
+#EMAIL_HOST_USER='alkarshi.abdullrahman@gmail.com'
+#EMAIL_HOST_PASSWORD="btyb zxsl nfkj maej"
 
 
 
