--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ APP_SECRET=30a034f3cd436b7a33f584db1946fc4a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 
-#LIAISON A LA BDD
+#LIAISON A LA BDD 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:Abdullrahman@127.0.0.1:3306/BddAeroBLOG"
+DATABASE_URL="mysql://259738_admin:Abdullrahman@127.0.0.1:3306/mysql-portfolio-alkarshi-abdullrahman.alwaysdata.net"
 
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
